--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TARCLearnMobile"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.activity.CourseActivity"/>
+        <activity android:name=".ui.activity.ChapterActivity"/>
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
