--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,12 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
     def fragment_version = "1.3.3"
     def lifecycle_version = "2.3.1"
     def room_version = '2.4.0-alpha02'
+    def work_version = "2.6.0-beta01"
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -78,8 +78,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
     //media player
     implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
-
+    //work manager
+    implementation("androidx.work:work-runtime-ktx:$work_version")
+    implementation 'com.squareup.okio:okio:2.8.0'
+    implementation 'net.gotev:uploadservice:4.5.5'
 }
